tests/return-outside-fn.test
[case function]
def f():
    return

[case module-scope]
return  # E: 'return' outside function

[case class-scope]
class A:
    return  # E: 'return' outside function
